--- a/index.html
+++ b/index.html
@@ -2,110 +2,209 @@
 <html lang="en-us">
 <head>
   <meta charset="utf-8">
-  <title>Lightbox Example</title>
+  <title>The Wonders of Studio Ghibli</title>
   <link rel="stylesheet" href="css/lightbox.css">
   <link rel="stylesheet" href="css/hover_overlay.css">
+  <!---------AOS-->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-  <h3>The Wonders of Studio Ghibli</h3>
+  <div class="header" data-aos="zoom-in">
+    <h3>The Wonders of Studio Ghibli</h3>
+  </div>
   <section>
-    <div class="container">
-        <a href="images/image1.jpg" data-lightbox="example-set" data-title="After seeing Spirited Away, Christian Bale offered to play any role he was given for the English dub of Howl’s.">
-            <img src="images/thumbnail1.jpg">
+    <div class="container" data-aos="flip-right">
+        <a href="images/image01.jpg" data-lightbox="example-set" data-title="Warrior and pacifist Princess Nausicaä desperately struggles to prevent two warring nations from destroying themselves and their dying planet.">
+            <img src="images/thumbnail01.png">
             <div class="overlay">
-              <div class="text">Howl's Moving Castle</div>
+              <div class="text">Nausicaä of the Valley of the Wind</div>
             </div>
         </a>
      </div>
-    <div class="container">
-        <a href="images/image2.png" data-lightbox="example-set" data-title="Miyazaki derived the name ‘Laputa’ from Gulliver’s Travels by Jonathan Swift. However, he was unaware that it meant ‘the whore’ in Spanish and said he wouldn’t have used it if he’d known. Disney had to release it as simply Castle in the Sky.">
-            <img src="images/thumbnail2.png">
+    <div class="container" data-aos="flip-up">
+        <a href="images/image02.jpg" data-lightbox="example-set" data-title="Pazu's life changes when he meets Sheeta, a girl whom pirates are chasing for her crystal amulet, which has the potential to locate Laputa, a legendary castle floating in the sky.">
+            <img src="images/thumbnail02.png">
             <div class="overlay">
-              <div class="text">The Castle in the Sky</div>
+              <div class="text">Castle in the Sky</div>
             </div>
         </a>
      </div>
-     <div class="container">
-        <a href="images/image3.jpg" data-lightbox="example-set" data-title="To gain inspiration for the setting of Kiki’s, Miyazaki took his artists to Sweden. Koriko was based on Stockholm and Visby, as well as drawing influences from Milan, Lisbon, Paris and San Francisco.">
-            <img src="images/thumbnail3.png">
-            <div class="overlay">
-              <div class="text">Kiki's Delivery Service</div>
-            </div>
-        </a>
-     </div>
-     <div class="container">
-        <a href="images/image4.jpg" data-lightbox="example-set" data-title="The film is based on a true story. Akiyuki Nosaka lost his little sister during the war to malnutrition and blamed himself for her death.">
-            <img src="images/thumbnail4.png">
+     <div class="container" data-aos="flip-up">
+        <a href="images/image03.jpg" data-lightbox="example-set" data-title="A young boy and his little sister struggle to survive in Japan during World War II.">
+            <img src="images/thumbnail03.png">
             <div class="overlay">
               <div class="text">Grave of the Fireflies</div>
             </div>
         </a>
      </div>
-     <div class="container">
-        <a href="images/image5.jpg" data-lightbox="example-set" data-title="A story told by Porco during the movie was based on a piece of short fiction written by Roald Dahl about his time as an airforce pilot.">
-            <img src="images/thumbnail5.png">
+     <div class="container" data-aos="flip-up">
+        <a href="images/image04.jpg" data-lightbox="example-set" data-title="When two girls move to the country to be near their ailing mother, they have adventures with the wondrous forest spirits who live nearby.">
+            <img src="images/thumbnail04.png">
+            <div class="overlay">
+              <div class="text">My Neighbor Totoro</div>
+            </div>
+        </a>
+     </div>
+     <div class="container" data-aos="flip-left">
+        <a href="images/image05.jpg" data-lightbox="example-set" data-title="Along with her black cat Jiji, Kiki settles in a seaside town and starts a high-flying delivery service. Here begins her magical encounter with independence and responsibility, making lifelong friends and finding her place in the world.">
+            <img src="images/thumbnail05.png">
+            <div class="overlay">
+              <div class="text">Kiki's Delivery Service</div>
+            </div>
+        </a>
+     </div>
+     <div class="container" data-aos="flip-right">
+        <a href="images/image06.jpg" data-lightbox="example-set" data-title="A twenty-seven-year-old office worker travels to the countryside while reminiscing about her childhood in Tokyo.">
+            <img src="images/thumbnail06.png">
+            <div class="overlay">
+              <div class="text">Only Yesterday</div>
+            </div>
+        </a>
+     </div>
+     <div class="container" data-aos="zoom-in">
+        <a href="images/image07.jpg" data-lightbox="example-set" data-title="In 1930s Italy, a veteran World War I pilot is cursed to look like an anthropomorphic pig.">
+            <img src="images/thumbnail07.png">
             <div class="overlay">
               <div class="text">Porco Rosso</div>
             </div>
         </a>
      </div>
-     <div class="container">
-        <a href="images/image6.jpg" data-lightbox="example-set" data-title="The design of the ocean waves during the typhoon caused by Ponyo were inspired by the waves in the famous woodblock print The Wave Off Kanagawa by Japanese artist Hokusai. The character of Toki, the cranky old woman at the wheelchair, is modeled after Hayao Miyazaki's mother.">
-            <img src="images/thumbnail6.png">
+     <div class="container" data-aos="zoom-in">
+        <a href="images/image08.jpg" data-lightbox="example-set" data-title="As a young man returns home after his first year away at college he recalls his senior year of high school and the iron-willed, big city girl that turned his world upside down.">
+            <img src="images/thumbnail08.png">
             <div class="overlay">
-              <div class="text">Ponyo</div>
+              <div class="text">Ocean Waves</div>
             </div>
         </a>
      </div>
-     <div class="container">
-        <a href="images/image7.png" data-lightbox="example-set" data-title="Spirited Away is the only anime film to win an Academy Award. It also reclaimed the record for highest grossing movie in Japan from Titanic, which still stands to this day.">
-            <img src="images/thumbnail7.png">
+     <div class="container" data-aos="zoom-in">
+        <a href="images/image09.jpg" data-lightbox="example-set" data-title="A community of magical shape-shifting raccoon dogs struggle to prevent their forest home from being destroyed by urban development.">
+            <img src="images/thumbnail09.png">
             <div class="overlay">
-              <div class="text">Spirited Away</div>
+              <div class="text">Pom Poko</div>
             </div>
         </a>
      </div>
-     <div class="container">
-        <a href="images/image8.jpg" data-lightbox="example-set" data-title="This movie started when Studio Ghibli received a proposal from a Japanese theme park to make a twenty-minute animation starring cats.">
-            <img src="images/thumbnail8.png">
-            <div class="overlay">
-              <div class="text">The Cat Returns</div>
-            </div>
-        </a>
-     </div>
-     <div class="container">
-        <a href="images/image9.jpg" data-lightbox="example-set" data-title="The name Totoro comes from one of the girls mispronouncing the Japanese word for ‘troll’, which is Tororu.">
-            <img src="images/thumbnail9.png">
-            <div class="overlay">
-              <div class="text">Totoro</div>
-            </div>
-        </a>
-     </div>
-     <div class="container">
-        <a href="images/image10.jpg" data-lightbox="example-set" data-title="After the first screening of the film, director Hayao Miyazaki said it was the first time he ever cried during the screening of his own movie.">
+     <div class="container" data-aos="flip-left">
+        <a href="images/image10.jpg" data-lightbox="example-set" data-title="A love story between a girl who loves reading books, and a boy who has previously checked out all of the library books she chooses.">
             <img src="images/thumbnail10.png">
             <div class="overlay">
-              <div class="text">The Wind Rises</div>
+              <div class="text">Whisper of the Heart</div>
             </div>
         </a>
      </div>
-     <div class="container">
-        <a href="images/image11.jpg" data-lightbox="example-set" data-title="The Yamadas are a typical middle class Japanese family in urban Tokyo and this film shows us a variety of episodes of their lives.">
+     <div class="container" data-aos="flip-right">
+        <a href="images/image11.jpg" data-lightbox="example-set" data-title="On a journey to find the cure for a Tatarigami's curse, Ashitaka finds himself in the middle of a war between the forest gods and Tatara, a mining colony. In this quest he also meets San, the Mononoke Hime.">
             <img src="images/thumbnail11.png">
-            <div class="overlay">
-              <div class="text">My Neighbors the Yamadas</div>
-            </div>
-        </a>
-     </div>
-     <div class="container">
-        <a href="images/image12.jpg" data-lightbox="example-set" data-title="Upon its release, Mononoke became the highest grossing movie in Japan. It was later beaten by Titanic.">
-            <img src="images/thumbnail12.png">
             <div class="overlay">
               <div class="text">Princess Mononoke</div>
             </div>
         </a>
      </div>
-     
+     <div class="container" data-aos="zoom-in">
+        <a href="images/image12.jpg" data-lightbox="example-set" data-title="The life and misadventures of a family in contemporary Japan.">
+            <img src="images/thumbnail12.png">
+            <div class="overlay">
+              <div class="text">My Neighbors the Yamadas</div>
+            </div>
+        </a>
+     </div>
+     <div class="container" data-aos="zoom-in">
+      <a href="images/image13.jpg" data-lightbox="example-set" data-title="During her family's move to the suburbs, a sullen 10-year-old girl wanders into a world ruled by gods, witches and spirits, and where humans are changed into beasts.">
+          <img src="images/thumbnail13.png">
+          <div class="overlay">
+            <div class="text">Spirited Away</div>
+          </div>
+      </a>
+    </div>
+    <div class="container" data-aos="zoom-in">
+      <a href="images/image14.jpg" data-lightbox="example-set" data-title="After helping a cat, a seventeen-year-old girl finds herself involuntarily engaged to a cat Prince in a magical world where her only hope of freedom lies with a dapper cat statuette come to life.">
+          <img src="images/thumbnail14.png">
+          <div class="overlay">
+            <div class="text">The Cat Returns</div>
+          </div>
+      </a>
+    </div>
+    <div class="container" data-aos="flip-left">
+      <a href="images/image15.jpg" data-lightbox="example-set" data-title="When an unconfident young woman is cursed with an old body by a spiteful witch, her only chance of breaking the spell lies with a self-indulgent yet insecure young wizard and his companions in his legged, walking castle.">
+        <img src="images/thumbnail15.png">
+        <div class="overlay">
+          <div class="text">Howl's Moving Castle</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="flip-right">
+      <a href="images/image16.jpg" data-lightbox="example-set" data-title="In a mythical land, a man and a young boy investigate a series of unusual occurrences.">
+        <img src="images/thumbnail16.png">
+        <div class="overlay">
+          <div class="text">Tales from Earthsea</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="zoom-in">
+      <a href="images/image17.jpg" data-lightbox="example-set" data-title="A five-year-old boy develops a relationship with Ponyo, a young goldfish princess who longs to become a human after falling in love with him.">
+        <img src="images/thumbnail17.png">
+        <div class="overlay">
+          <div class="text">Ponyo</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="zoom-in">
+      <a href="images/image18.jpg" data-lightbox="example-set" data-title="The Clock family are four-inch-tall people who live anonymously in another family's residence, borrowing simple items to make their home. Life changes for the Clocks when their teenage daughter Arrietty is discovered.">
+        <img src="images/thumbnail18.png">
+        <div class="overlay">
+          <div class="text">The Secret World of Arrietty</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="zoom-in">
+      <a href="images/image19.jpg" data-lightbox="example-set" data-title="A group of Yokohama teens look to save their school's clubhouse from the wrecking ball in preparations for the 1964 Tokyo Olympics.">
+        <img src="images/thumbnail19.png">
+        <div class="overlay">
+          <div class="text">From Up on Poppy Hill</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="flip-left">
+      <a href="images/image20.jpg" data-lightbox="example-set" data-title="Jiro Horikoshi studies assiduously to fulfill his aim of becoming an aeronautical engineer. As WWII begins, fighter aircraft designed by him end up getting used by the Japanese Empire against its foes.">
+        <img src="images/thumbnail20.png">
+        <div class="overlay">
+          <div class="text">The Wind Rises</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="flip-right">
+      <a href="images/image21.jpg" data-lightbox="example-set" data-title="Kaguya is a beautiful young woman coveted by five nobles. To try to avoid marrying a stranger she doesn't love, she sends her suitors on seemingly impossible tasks. But she will have to face her fate and punishment for her choices.">
+        <img src="images/thumbnail21.png">
+        <div class="overlay">
+          <div class="text">The Tale of The Princess Kaguya</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="zoom-in">
+      <a href="images/image22.jpg" data-lightbox="example-set" data-title="Anna, a shy 12-year-old girl, is sent to spend time with her aunt and uncle who live in the countryside, where she meets Marnie. The two become best friends. But Anna gradually discovers that Marnie is not quite who she appears to be.">
+        <img src="images/thumbnail22.png">
+        <div class="overlay">
+          <div class="text">When Marnie Was There</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="zoom-in">
+      <a href="images/image23.jpg" data-lightbox="example-set" data-title="An orphan girl, Earwig, is adopted by a witch and comes home to a spooky house filled with mystery and magic.">
+        <img src="images/thumbnail23.png">
+        <div class="overlay">
+          <div class="text">Earwig and the Witch</div>
+        </div>
+      </a>
+    </div>
+    <div class="container" data-aos="flip-left">
+      <a href="images/image24.jpg" data-lightbox="example-set" data-title="In the wake of his mother's death and his father's remarriage, a headstrong boy named Mahito ventures into a dreamlike world shared by both the living and the dead.">
+        <img src="images/thumbnail24.png">
+        <div class="overlay">
+          <div class="text">The Boy and the Heron</div>
+        </div>
+      </a>
+    </div>
   </section>
 
   <section>
@@ -114,7 +213,53 @@
     </p>
   </section>
 
+  <section>
+    <p>
+      Animations by Studio Ghibli and the original Artworks by Hayao Miyazaki, Kazuo Oga, Isao Takahata, Aoi Hiiragi, Hiroyuki Morita, Hiromasa Yonebayashi, Osamu Tanabe ,iMooZART, and Goro Miyazaki</a>
+    </p>
+  </section>
+
+  <div class="header">
+    <h3>Original links of images</h3>
+  </div>
+
+  <div class="source">
+    <ul>IMDB (https://www.imdb.com/list/ls033328579/)</ul>
+    <ul>https://www.pinterest.com/pin/458241330830527798/</ul>
+    <ul>https://alphacoders.com/laputa:-castle-in-the-sky-wallpapers</ul>
+    <ul>https://www.pressherald.com/2019/06/17/grave-of-the-fireflies/</ul>
+    <ul>https://wallpapers.com/totoro</ul>
+    <ul>https://www.formyanime.com/2024/04/kikis-delivery-service-wallpapers.html.html</ul>
+    <ul>https://www.deviantart.com/sillyjellybeans/art/Wp9150782-only-yesterday-wallpapers-973309600</ul>
+    <ul>https://radicaledward.substack.com/p/30-years-of-ghibli-porco-rosso</ul>
+    <ul>https://wallpapers.com/ocean-waves</ul>
+    <ul>https://wall.alphacoders.com/big.php?i=809767</ul>
+    <ul>https://mrwallpaper.com/wallpapers/studio-ghibli-desktop-whisper-of-the-heart-c1cjastxoloojw9q.html</ul>
+    <ul>https://www.reddit.com/r/wallpapers/comments/79v0df/princess_mononoke_official_2230x1080/</ul>
+    <ul>https://wall.alphacoders.com/big.php?i=808049</ul>
+    <ul>https://wallpapers.com/spirited-away</ul>
+    <ul>https://wall.alphacoders.com/big.php?i=818911</ul>
+    <ul>https://wallpaperswide.com/drawing_moving_castle-wallpapers.html</ul>
+    <ul>https://wall.alphacoders.com/big.php?i=19558</ul>
+    <ul>https://www.goodfon.com/anime/wallpaper-download-2540x1760-badfon-ponyo-on-the-cliff-by-the-sea.html</ul>
+    <ul>https://wallpapers.com/the-secret-world-of-arrietty</ul>
+    <ul>https://www.pinterest.com/pin/from-up-on-poppy-</ul>
+    <ul>https://www.frontmatterblog.com/2020/10/the-wind-rises-as-an-illustration-of-historical-contemporary-fictions-goals/</ul>
+    <ul>https://wallpapers.com/wallpapers/the-tale-of-the-princess-kaguya-1920-x-1080-wallpaper-o8uzcwapkrlhy4rt.html</ul>
+    <ul>https://wallpapers.com/when-marnie-was-there</ul>
+    <ul>https://wall.alphacoders.com/big.php?i=1168486</ul>
+    <ul>https://www.sinegang.ph/filmreviews/the-boy-and-the-heron-jju</ul>
+  </div>
+
   <script src="js/lightbox-plus-jquery.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script type="text/javascript" src="js/smooth-parallax.js"></script>
+  <script type="text/javascript">
+          window.addEventListener("load", function () {
+            SmoothParallax.init();
+          });
+          AOS.init();
+  </script>
 
 </body>
 </html>
